# pingen2-sdk-rust

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  tarpaulin.toml
.github/workflows/: ci.yml  publish.yml
src/: error.rs  lib.rs  oauth.rs  response.rs  webhook.rs
src/api/: batch_events.rs  batches.rs  client.rs  ebills.rs  emails.rs  file_upload.rs  letter_events.rs  letters.rs  mod.rs  organisations.rs  requestor.rs  user_associations.rs  users.rs  webhooks.rs
src/dto/: batch.rs  ebill.rs  email.rs  event.rs  file_upload.rs  json_api.rs  letter.rs  mod.rs  organisation.rs  preset.rs  relationships.rs  token.rs  typed_response.rs  user.rs  webhook.rs  webhook_event.rs
src/types/: address_position.rs  batch_delivery_product.rs  batch_icon.rs  delivery_product.rs  grouping_type.rs  mod.rs  paper_type.rs  print_mode.rs  print_spectrum.rs  split_position.rs  split_type.rs  webhook_event_category.rs
tests/: test_batch_events.rs  test_batches.rs  test_client.rs  test_ebills.rs  test_emails.rs  test_letter_events.rs  test_letters.rs  test_oauth.rs  test_organisations.rs  test_preset.rs  test_requestor.rs  test_types.rs  test_user_associations.rs  test_users.rs  test_webhook_event.rs  test_webhooks.rs
tests/common/: mod.rs
