[package]
name    = "pingen2-sdk"
version = "0.0.0" # set automatically from git tag during publish
edition = "2021"
description = "Official Rust SDK for the Pingen2 API"
license = "MIT"
repository = "https://github.com/pingencom/pingen2-sdk-rust"

[dependencies]
reqwest    = { version = "0.12", features = ["json", "multipart", "stream"] }
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
tokio      = { version = "1",    features = ["full"] }
thiserror  = "1"
hmac       = "0.12"
sha2       = "0.10"
hex        = "0.4"
url        = "2"
urlencoding = "2"

[dev-dependencies]
mockito = "1"
tokio   = { version = "1", features = ["full"] }
